third week notes

--- a/305/introduction.tex
+++ b/305/introduction.tex
@@ -16,7 +16,7 @@
 \pdfbookmark[section]{\contentsname}{toc}
 % \tableofcontents
 % \pagebreak
-
+\chapter{}
 \section{Phases}
 Project lifecycle
 \begin{enumerate}
@@ -134,4 +134,7 @@ Throughout the projects lifecycle we have ``mini-livecycles'' called \textbf{pro
 \textbf{Waterfall Project lifecycle}
 
 \includegraphics[width=0.5\textwidth]{waterfall_plcycle}
+
+\section{Stakeholders}
+
 \end{document}
